tests/NormalTests/paczka1/small_fuzzy/77595962.err
Error in line 1: np1FXIsFBg A342 38,3
Error in line 3: np1FXIsFBg S765 5,9
Error in line 12: np1FXIsFBg A342 47,0
Error in line 9: NBsn0peWCwy A342 5,2
